use min-height for image to prevent collapsing

--- a/src/pages/image-slice/image-slice.scss
+++ b/src/pages/image-slice/image-slice.scss
@@ -12,6 +12,7 @@
 
         >.image-container {
             overflow: hidden;
+            min-height: 200px;
             >.image {
                 margin: -5px;
             }
